working version with profiling

--- a/filesAndHashes.ipynb
+++ b/filesAndHashes.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,8 @@
     "rm -rf /src/data/test1/ /src/data/test2/ /src/data/duplicates\n",
     "cp -r '/src/data/test1 (copy)/' '/src/data/test1/'\n",
     "cp -r '/src/data/test2 (copy)/' '/src/data/test2/'\n",
-    "\n"
+    "cp -r '/src/data/test2 (copy)/' '/src/data/test2/2015-10/'\n",
+    "cp -r '/src/data/test1 (copy)/' '/src/data/test1/2015-09/'"
    ]
   },
   {
@@ -205,29 +206,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "346\n",
-      "checkForDuplicates took 2.2411575317382812s\n",
-      "inputImages length 346\n",
-      "knownImagesMap length 423\n",
-      "\n",
-      "moveTheDuplicates took 0.10678672790527344s\n"
+      "The line_profiler extension is already loaded. To reload it, use:\n",
+      "  %reload_ext line_profiler\n"
      ]
     }
    ],
    "source": [
-    "## Start by loading the master list\n",
+    "%load_ext line_profiler\n",
+    "#%%time\n",
+    "## Start by loading the uniqueFiles list\n",
     "## Prepare the list of unique file paths\n",
     "## Find duplicates using the hash\n",
     "## move duplicates to duplicates folder\n",
     "## the run should output [hash, originalFilePath, [duplciate 1 path, /duplicate 2 path, duplicate 3,....]]\n",
-    "## save this master list along with the hash [hash, original file path]\n",
+    "## save this uniqueFiles list along with the hash [hash, original file path]\n",
     "import json\n",
     "from os import walk, path, sep, makedirs\n",
     "\n",
@@ -237,59 +236,68 @@
     "import shutil\n",
     "import logging\n",
     "import threading\n",
+    "makeDirLock = threading.Lock()\n",
     "\n",
-    "def buildKnownFilesList(masterList):\n",
-    "    if (path.exists(masterList)):\n",
-    "        return json.load(open(masterList))\n",
-    "    else:\n",
-    "        return {}\n",
+    "## loads the file paths and hashes that are previously known\n",
+    "## also ensures that all those files are actually present on the disk\n",
+    "def loadUniqueFilesMap(uniqueFilesMapFile):\n",
+    "    uniqueFilesMap = json.load(open(uniqueFilesMapFile)) if path.exists(uniqueFilesMapFile) else {}\n",
+    "     # We can use a with statement to ensure threads are cleaned up promptly\n",
+    "    with concurrent.futures.ProcessPoolExecutor() as executor:\n",
+    "        # Start the load operations and mark each future with its URL\n",
+    "        future_to_file = {executor.submit(path.exists, inputFile): inputFile for inputFile in uniqueFilesMap.values()}\n",
+    "        for future in concurrent.futures.as_completed(future_to_file):\n",
+    "            if (not future.result()):\n",
+    "                raise OSError(\"File not found : {}\".format(future_to_file[future]))\n",
     "\n",
-    "def buildInputFilesList(inputPaths, knownImagesMap):\n",
-    "    inputImages = []\n",
+    "    return uniqueFilesMap\n",
+    "\n",
+    "## creates and returns a list of all the file paths from the inputPaths that are not\n",
+    "## known(not present in uniqueFilesMap)\n",
+    "def buildInputFilesList(inputPaths, uniqueFilesMap):\n",
+    "    inputFiles = []\n",
     "    for inputPath in inputPaths:\n",
     "        for root, dirs, files in walk(inputPath):\n",
-    "            inputImages.extend(img for img in [path.join(root, f) for f in files] if img not in inputImages if img not in knownImagesMap.values())\n",
-    "    return inputImages\n",
+    "            inputFiles.extend(img for img in [path.join(root, f) for f in files] if img not in inputFiles if img not in uniqueFilesMap.values())\n",
+    "    return inputFiles\n",
     "\n",
     "def calculateMD5Hash(file):\n",
     "    fh = open(file, \"rb\")\n",
     "    return hashlib.md5(fh.read()).hexdigest()\n",
     "\n",
-    "def checkForDuplicates(inputImages, knownImagesMap):\n",
-    "    duplicateImagesMap = {}\n",
+    "## find all the inputFiles that are already present in uniqueFilesMap and add them to the duplicateFilesMap\n",
+    "## all the new files frim teh inputFiles get added to uniqueFilesMap\n",
+    "def checkForDuplicates(inputFiles, uniqueFilesMap):\n",
+    "    duplicateFilesMap = {}\n",
     "    # We can use a with statement to ensure threads are cleaned up promptly\n",
-    "    with concurrent.futures.ProcessPoolExecutor() as executor:\n",
+    "    with concurrent.futures.ThreadPoolExecutor() as executor:\n",
     "        # Start the load operations and mark each future with its URL\n",
-    "        future_to_file = {executor.submit(calculateMD5Hash, inputFile): inputFile for inputFile in inputImages}\n",
+    "        future_to_file = {executor.submit(calculateMD5Hash, inputFile): inputFile for inputFile in inputFiles}\n",
     "        for future in concurrent.futures.as_completed(future_to_file):\n",
     "            file = future_to_file[future]\n",
-    "            try:\n",
-    "                md5Hash = future.result()\n",
-    "\n",
-    "            except Exception as exc:\n",
-    "                print('%r generated an exception: %s' % (file, exc))\n",
-    "            else:\n",
-    "                if md5Hash in knownImagesMap:\n",
-    "                    if md5Hash in duplicateImagesMap:\n",
-    "                        duplicateImagesMap[md5Hash].append(file)\n",
-    "                    else:\n",
-    "                        duplicateImagesMap[md5Hash] = [knownImagesMap[md5Hash], file]\n",
+    "            md5Hash = future.result()\n",
+    "            if md5Hash in uniqueFilesMap:\n",
+    "                if md5Hash in duplicateFilesMap:\n",
+    "                    duplicateFilesMap[md5Hash].append(file)\n",
     "                else:\n",
-    "                    knownImagesMap[md5Hash] = file\n",
-    "    return duplicateImagesMap\n",
+    "                    duplicateFilesMap[md5Hash] = [uniqueFilesMap[md5Hash], file]\n",
+    "            else:\n",
+    "                uniqueFilesMap[md5Hash] = file\n",
+    "    return duplicateFilesMap\n",
     "\n",
+    "\n",
+    "## Moves the inputFile to the duplicatesFolder\n",
     "def moveFile(inputFile, duplicatesFolder):\n",
     "    try:\n",
     "        ## To join two absolute paths, we need to split the second path into its components and path\n",
     "        ## that as an expanded list\n",
     "        destFolder = path.join(duplicatesFolder, *path.normpath(path.dirname(inputFile)).split(sep))\n",
     "\n",
-    "        lock = threading.RLock()\n",
-    "        lock.acquire()\n",
+    "        makeDirLock.acquire()\n",
     "        ## Create the dest folder if necessary\n",
     "        if (not path.exists(destFolder)):\n",
     "            makedirs(destFolder)\n",
-    "        lock.release()\n",
+    "        makeDirLock.release()\n",
     "\n",
     "        shutil.move(inputFile, path.join(destFolder, path.basename(inputFile)))\n",
     "        #print (inputFile)\n",
@@ -297,12 +305,13 @@
     "        logging.exception(\"\")\n",
     "        raise\n",
     "        \n",
-    "    \n",
-    "def moveTheDuplicates(duplicateImagesMap, duplicatesDestRoot):\n",
+    "## moves all the duplicates from the duplicateFilesMap to duplicatesDestRoot folder and preserves\n",
+    "## the original directory structure\n",
+    "def moveTheDuplicates(duplicateFilesMap, duplicatesDestRoot):\n",
     "    # We can use a with statement to ensure threads are cleaned up promptly\n",
     "    with concurrent.futures.ThreadPoolExecutor() as executor:\n",
     "        # Start the load operations and mark each future with its URL\n",
-    "        for duplicateFiles in duplicateImagesMap.values():\n",
+    "        for duplicateFiles in duplicateFilesMap.values():\n",
     "            if (len(duplicateFiles) > 1):\n",
     "                future_to_file = {executor.submit(moveFile, duplicateFile, duplicatesDestRoot): duplicateFile for duplicateFile in duplicateFiles[1:]}\n",
     "                for future in concurrent.futures.as_completed(future_to_file):\n",
@@ -311,41 +320,42 @@
     "                raise Exception(\"how did you get a single file entry in duplicate files list?\")\n",
     "             \n",
     "            \n",
-    "\n",
-    "def saveFileList(knownImagesMap, uniqueFilesMapPath, duplicateImagesMap, duplicateFilesMapPath):\n",
-    "    duplicateFilesMapJson = json.JSONEncoder(sort_keys=True, indent=0).encode(duplicateImagesMap)\n",
+    "## Saves the duplicate and unique files list in a json file\n",
+    "def saveFileList(uniqueFilesMap, uniqueFilesMapPath, duplicateFilesMap, duplicateFilesMapPath):\n",
+    "    duplicateFilesMapJson = json.JSONEncoder(sort_keys=True, indent=0).encode(duplicateFilesMap)\n",
     "    with open(duplicateFilesMapPath, 'w') as jsonFile:\n",
     "        jsonFile.write(duplicateFilesMapJson)\n",
     "\n",
     "   \n",
-    "    uniqueFilesMapJson = json.JSONEncoder(sort_keys=True, indent=0).encode(knownImagesMap)\n",
+    "    uniqueFilesMapJson = json.JSONEncoder(sort_keys=True, indent=0).encode(uniqueFilesMap)\n",
     "    with open(uniqueFilesMapPath, 'w') as jsonFile:\n",
     "        jsonFile.write(uniqueFilesMapJson)\n",
     "\n",
     "def main():\n",
-    "    \n",
     "    inputPaths=['/src/data/test1/', '/src/data/test2/']\n",
     "    duplicatesPath='/src/data/duplicates'\n",
     "    uniqueFilesMapPath='/src/data/uniqueFiles.json'\n",
     "    duplicateFilesMapPath='/src/data/duplicateFiles.json'\n",
-    "    startTime = time.time()\n",
-    "\n",
-    "    knownImagesMap=buildKnownFilesList(uniqueFilesMapPath)\n",
-    "\n",
-    "    inputImages = buildInputFilesList(inputPaths, knownImagesMap)\n",
-    "    print (len(inputImages))\n",
-    "    duplicateImagesMap = checkForDuplicates(inputImages, knownImagesMap)\n",
-    "    print('checkForDuplicates took {}s'.format(time.time() - startTime))\n",
-    "    print ('inputImages length {}'.format(len(inputImages)))\n",
-    "    print ('knownImagesMap length {}'.format(len(knownImagesMap)))\n",
     "    \n",
-    "    startTime = time.time()\n",
-    "    print()\n",
-    "    moveTheDuplicates(duplicateImagesMap, duplicatesPath)\n",
-    "    print('moveTheDuplicates took {}s'.format(time.time() - startTime))\n",
-    "    saveFileList(knownImagesMap, uniqueFilesMapPath, duplicateImagesMap, duplicateFilesMapPath)\n",
+    "    uniqueFilesMap=loadUniqueFilesMap(uniqueFilesMapPath)\n",
+    "    inputFiles = buildInputFilesList(inputPaths, uniqueFilesMap)\n",
+    "    duplicateFilesMap = checkForDuplicates(inputFiles, uniqueFilesMap)\n",
+    "    moveTheDuplicates(duplicateFilesMap, duplicatesPath)\n",
+    "    saveFileList(uniqueFilesMap, uniqueFilesMapPath, duplicateFilesMap, duplicateFilesMapPath)\n",
     "\n",
-    "main()"
+    "\n",
+    "%lprun -f loadUniqueFilesMap main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%lprun?"
    ]
   }
  ],
