--- a/separateDuplicateFiles.ipynb
+++ b/separateDuplicateFiles.ipynb
@@ -18,11 +18,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/src/data/testPythonDuplicateFinder/2015-09/IMG_1313.JPG'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-b48794febf69>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mshanthiPic\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'/src/data/testPythonDuplicateFinder/2015-09/IMG_1313.JPG'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcalculateMD5Hash\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshanthiPic\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-4-b48794febf69>\u001b[0m in \u001b[0;36mcalculateMD5Hash\u001b[0;34m(file)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mhashlib\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mcalculateMD5Hash\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mfh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mhashlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmd5\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfh\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/src/data/testPythonDuplicateFinder/2015-09/IMG_1313.JPG'"
+     ]
+    }
+   ],
    "source": [
     "import hashlib\n",
     "def calculateMD5Hash(file):\n",
@@ -184,13 +195,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%%bash\n",
     "## Data Setup\n",
-    "rm -rf /src/data/test1/ /src/data/test2/ /src/data/duplicates\n",
+    "rm -rf /src/data/test1/ /src/data/test2/ /src/data/duplicates /src/data/*.json\n",
     "cp -r '/src/data/test1 (copy)/' '/src/data/test1/'\n",
     "cp -r '/src/data/test2 (copy)/' '/src/data/test2/'\n",
     "cp -r '/src/data/test2 (copy)/' '/src/data/test2/2015-10/'\n",
@@ -206,20 +219,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The line_profiler extension is already loaded. To reload it, use:\n",
-      "  %reload_ext line_profiler\n"
-     ]
-    }
-   ],
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "%load_ext line_profiler\n",
+    "#%load_ext line_profiler\n",
     "#%%time\n",
     "## Start by loading the uniqueFiles list\n",
     "## Prepare the list of unique file paths\n",
@@ -311,14 +317,16 @@
     "    # We can use a with statement to ensure threads are cleaned up promptly\n",
     "    with concurrent.futures.ThreadPoolExecutor() as executor:\n",
     "        # Start the load operations and mark each future with its URL\n",
+    "        future_to_file = {}\n",
     "        for duplicateFiles in duplicateFilesMap.values():\n",
     "            if (len(duplicateFiles) > 1):\n",
-    "                future_to_file = {executor.submit(moveFile, duplicateFile, duplicatesDestRoot): duplicateFile for duplicateFile in duplicateFiles[1:]}\n",
-    "                for future in concurrent.futures.as_completed(future_to_file):\n",
-    "                    file = future_to_file[future]\n",
+    "                ## This will merge the new dict returned by executer.submit with future_to_file and save the result\n",
+    "                ## in future_to_file\n",
+    "                future_to_file = {**future_to_file, **{executor.submit(moveFile, duplicateFile, duplicatesDestRoot): duplicateFile for duplicateFile in duplicateFiles[1:]}}\n",
     "            else:\n",
     "                raise Exception(\"how did you get a single file entry in duplicate files list?\")\n",
-    "             \n",
+    "        for future in concurrent.futures.as_completed(future_to_file):\n",
+    "            pass\n",
     "            \n",
     "## Saves the duplicate and unique files list in a json file\n",
     "def saveFileList(uniqueFilesMap, uniqueFilesMapPath, duplicateFilesMap, duplicateFilesMapPath):\n",
@@ -344,7 +352,7 @@
     "    saveFileList(uniqueFilesMap, uniqueFilesMapPath, duplicateFilesMap, duplicateFilesMapPath)\n",
     "\n",
     "\n",
-    "%lprun -f loadUniqueFilesMap main()"
+    "#%lprun -f loadUniqueFilesMap main()"
    ]
   },
   {
@@ -356,6 +364,182 @@
    "outputs": [],
    "source": [
     "%lprun?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ensure duplicates are actually duplicates by checking the size "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1115 future_to_file size\n",
+      "17605 future_to_file size\n",
+      "done\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "import concurrent.futures\n",
+    "\n",
+    "def haveSameSize(file1, file2):\n",
+    "    return os.stat(file1).st_size == os.stat(file2).st_size\n",
+    "\n",
+    "## loads the file paths and hashes that are previously known\n",
+    "## also ensures that all those files are actually present on the disk\n",
+    "def loadDuplicateFilesMap(duplicateFilesMapFile):\n",
+    "    if os.path.exists(duplicateFilesMapFile):\n",
+    "        duplicateFilesMap = json.load(open(duplicateFilesMapFile))\n",
+    "\n",
+    "        # We can use a with statement to ensure threads are cleaned up promptly\n",
+    "        with concurrent.futures.ThreadPoolExecutor() as executor:\n",
+    "            future_to_file = {}\n",
+    "            # Start the load operations and mark each future with its URL\n",
+    "            for duplicateFiles in duplicateFilesMap.values():\n",
+    "                if (len(duplicateFiles) < 1):\n",
+    "                    raise Exception(\"how did you get a single file entry in duplicate files list?\")\n",
+    "                future_to_file = {**future_to_file, **{executor.submit(haveSameSize, duplicateFiles[0], os.path.join(duplicatesBasePath, *os.path.normpath(duplicateFile).split(os.sep))): duplicateFile for duplicateFile in duplicateFiles[1:]}}\n",
+    "            print ('{} future_to_file size'.format(len(future_to_file)))    \n",
+    "            for future in concurrent.futures.as_completed(future_to_file):\n",
+    "                if not future.result():\n",
+    "                    print ('{} is a false duplicate'.format(future_to_file[future]))\n",
+    "\n",
+    "duplicatesBasePath = '/src/data/duplicates/'\n",
+    "loadDuplicateFilesMap('/src/data/duplicateFiles.json')\n",
+    "\n",
+    "duplicatesBasePath = '/media/vijay/Data/Pictures/duplicates/'\n",
+    "loadDuplicateFilesMap('/media/vijay/Data/Pictures/logs/duplicateFiles.json')\n",
+    "\n",
+    "print(\"done\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# UnitTest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from PIL import Image, ImageColor\n",
+    "import os.path\n",
+    "\n",
+    "def createTestData(basepath):\n",
+    "    imgArr = np.zeros(shape=[100,100,3], dtype=np.uint8)\n",
+    "    if not os.path.exists(basepath):\n",
+    "        os.makedirs(basepath)\n",
+    "    colorsAdded = set()\n",
+    "    for col in ImageColor.colormap.keys():\n",
+    "        colorString = ImageColor.colormap[col]\n",
+    "        if colorString not in colorsAdded:\n",
+    "            imgArr[:,:,:] = ImageColor.getrgb(colorString)\n",
+    "            Image.fromarray(imgArr, mode='RGB').save(os.path.join(basepath,'img{}.png'.format(col)))\n",
+    "            colorsAdded.add(colorString)\n",
+    "createTestData('/data/test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "...\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 3 tests in 0.005s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "import unittest\n",
+    "\n",
+    "class TestStringMethods(unittest.TestCase):\n",
+    "\n",
+    "    def test_upper(self):\n",
+    "        self.assertEqual('foo'.upper(), 'FOO')\n",
+    "\n",
+    "    def test_isupper(self):\n",
+    "        self.assertTrue('FOO'.isupper())\n",
+    "        self.assertFalse('Foo'.isupper())\n",
+    "\n",
+    "    def test_split(self):\n",
+    "        s = 'hello world'\n",
+    "        self.assertEqual(s.split(), ['hello', 'world'])\n",
+    "        # check that s.split fails when the separator is not a string\n",
+    "        with self.assertRaises(TypeError):\n",
+    "            s.split(2)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    unittest.main(argv=['first-arg-is-ignored'], exit=False)\n",
+    "#%tb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.073s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "import unittest\n",
+    "import os.path\n",
+    "import shutil\n",
+    "\n",
+    "class SimpleTest(unittest.TestCase):\n",
+    "    basePath = '/data/test'\n",
+    "    def setUp(self):\n",
+    "        if os.path.exists(SimpleTest.basePath):\n",
+    "            shutil.rmtree(SimpleTest.basePath)\n",
+    "        createTestData(SimpleTest.basePath)\n",
+    "        \n",
+    "    def test_uniqueFiles(self):\n",
+    "        os.makedirs(os.path.join(SimpleTest.basePath,'1'))\n",
+    "        os.makedirs(os.path.join(SimpleTest.basePath,'2'))\n",
+    "        os.makedirs(os.path.join(SimpleTest.basePath,'3'))\n",
+    "        \n",
+    "if __name__ == '__main__':\n",
+    "    unittest.main(argv=['first-arg-is-ignored'], exit=False)\n",
+    "#%tb"
    ]
   }
  ],
